CSS: Stage Imp. Early Stages - Fixed -- z-index troubles

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,15 @@
-.curtainLeft{
+.stageBar{
     position: fixed;
     z-index: 1;
+    border: red;
+    background-image: linear-gradient( 90deg, rgb(95, 22, 22), black, rgb(95, 22, 22), black, rgb(95, 22, 22), black, rgb(95, 22, 22));
+    width: 100%;
+    height: 10px;
+    box-shadow: 1px 1px 1px 1px #0a000c71, 0px 0px 1px #ff5f5f inset;
+}
+.curtainLeft{
+    position: fixed;
+    z-index: inherit;
     border: red;
     background-image: linear-gradient( 90deg, rgb(95, 22, 22), black, rgb(95, 22, 22), black, rgb(95, 22, 22), black, rgb(95, 22, 22));
     width: 8%;
@@ -9,6 +18,7 @@
 }
 .curtainRight{
     position: fixed;
+    z-index: inherit;
     right: 0rem;
     border: red;
     background-image: linear-gradient( 90deg, rgb(95, 22, 22), black, rgb(95, 22, 22), black, rgb(95, 22, 22), black, rgb(95, 22, 22));
@@ -18,6 +28,7 @@
 }
 .curtainBottomLeft{
     position: fixed;
+    z-index: 3;
     border: red;
     background-image: linear-gradient( 90deg, rgb(95, 22, 22), black, rgb(95, 22, 22), black);
     width: 3%;
@@ -26,6 +37,7 @@
 }
 .curtainBottomRight{
     position: fixed;
+    z-index: inherit;
     right: 0rem;
     border: red;
     background-image: linear-gradient( 90deg, rgb(95, 22, 22), black, rgb(95, 22, 22), black, rgb(95, 22, 22), black, rgb(95, 22, 22));
